<resources>
    <string name="app_name">Manage Sales</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="san_pham">Sản phẩm</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="tong_quan">Tổng quan</string>
    <string name="phieu_nhap">Phiếu nhập</string>
    <string name="them">Thêm</string>
    <string name="them_san_pham">Thêm sản phẩm</string>
    <string name="ten_san_pham">Tên sản phẩm</string>
    <string name="ma_san_pham">Mã sản phẩm</string>
    <string name="so_luong">Số lượng</string>
    <string name="don_gia">Đơn giá</string>
    <string name="don_vi_tinh">Đơn vị tính</string>
    <string name="luu">Lưu</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="xoa_san_pham">Xóa sản phẩm</string>
    <string name="dialog_mesage">Bạn có chắc chắn muốn xóa sản phẩm này không?</string>
    <string name="thoat">Thoát</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="tat_ca_san_pham">Tất cả sản phẩm</string>
    <string name="ngung_kinh_doanh">Ngừng kinh doanh</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="detail_supplier">Chi tiết nhà cung cấp</string>
    <string name="telephone">Số điện thoại</string>
    <string name="type">Loại</string>
    <string name="name_supplier">Tên nhà cung cấp</string>
    <string name="id_supplier">Mã nhà cung cấp</string>
    <string name="address">Địa chỉ</string>
    <string name="stop_cooperation">Ngừng hợp tác</string>
    <string name="add_supplier">Thêm nhà cung cấp</string>
    <string name="name_employee">Tên nhân viên</string>
    <string name="employee">Nhân viên</string>
    <string name="all_employee">Tất cả nhân viên</string>
    <string name="add_employee">Thêm nhân viên</string>
    <string name="id_employee">Mã nhân viên</string>
    <string name="detail_employee">Chi tiết nhân viên</string>
</resources>