<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xoa_san_pham"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tv_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_message"
            android:text="@string/dialog_mesage"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center"
            android:padding="@dimen/_16sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/thoat"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/blue"/>
            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/xac_nhan"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>