<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="addSupplier"
            type="vn.edu.stu.tranthanhsang.manage_sales.viewModel.supplier.AddSupplierViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#84EFF6FD"
        tools:context=".ui.supplier.SupplierAddActivity">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="#84EFF6FD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/ic_check"
            android:onClick="@{()->addSupplier.onclickSave()}"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_supplier"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toStartOf="@id/img_ok"
            app:layout_constraintStart_toEndOf="@id/img_cancel"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/custom_container"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_id_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_supplier"
                    android:text="@{addSupplier.idSupplier}"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_supplier"
                    android:text="@{addSupplier.nameSupplier}"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight=".7"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:text="@{addSupplier.telephone}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight=".3"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_type_supplier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type"
                        android:inputType="number"
                        android:maxLength="1"
                        android:singleLine="true"
                        android:text="@{addSupplier.supplierType}"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:text="@{addSupplier.address}"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_26sdp"
            android:background="@drawable/custom_button"
            android:text="@string/luu"
            android:textSize="16sp"
            android:padding="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="@{()->addSupplier.onclickSave()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
